<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fun_es_impressora_gpos800"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStatusImpressora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_impressora" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMensagemImpressao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/escreva_a_sua_mensagem" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/configura_o_de_impress_o"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbEsquerda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/esquerda" />

            <RadioButton
                android:id="@+id/rbCentralizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/centralizado" />

            <RadioButton
                android:id="@+id/rbDireita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direita" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/btnNegrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/negrito"
                android:textOff="@string/negrito"
                android:textOn="@string/negrito" />

            <ToggleButton
                android:id="@+id/btnItalico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/it_lico"
                android:textOff="@string/it_lico"
                android:textOn="@string/it_lico" />

            <ToggleButton
                android:id="@+id/btnSublinhado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sublinhado"
                android:textOff="@string/sublinhado"
                android:textOn="@string/sublinhado" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFonte"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/font"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/Fonts"
                android:scrollbarSize="2dp"
                android:spinnerMode="dialog"
                android:textAlignment="textEnd"
                android:gravity="end" />

            <TextView
                android:id="@+id/textViewTamanho"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/size"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spTamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/Tamanhos"
                android:spinnerMode="dialog"
                android:textAlignment="center" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnImprimir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text= "@string/imprimir" />

            <Button
                android:id="@+id/btnImagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imprimir_imagem" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/NestedWeights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bar_code_height" />

                <Spinner
                    android:id="@+id/spHeight"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:entries="@array/Widths"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:spinnerMode="dropdown"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bar_code_width" />

                <Spinner
                    android:id="@+id/spWidth"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:entries="@array/Widths"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:spinnerMode="dropdown"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBarCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barcodes" />

                <Spinner
                    android:id="@+id/spBarType"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:entries="@array/BarCodes"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:spinnerMode="dropdown"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnBarCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imprimir_barcode" />

        <Button
            android:id="@+id/btnTodasAsFuncoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imprimir_todasasfuncoes" />


    </LinearLayout>


</LinearLayout>